--- a/sections/404.liquid
+++ b/sections/404.liquid
@@ -131,8 +131,8 @@
                     loading: 'lazy'
                   }}
                 {% else %}
-                  <div class="tw-flex tw-h-full tw-w-full tw-items-center tw-justify-center tw-bg-velox-200">
-                    {% render 'icon', name: 'photo', class: 'tw-h-12 tw-w-12 tw-text-velox-400' %}
+                  <div class="tw-h-full tw-w-full tw-bg-velox-200">
+                    {{ 'collection-1' | placeholder_svg_tag: 'tw-h-full tw-w-full tw-object-cover tw-text-velox-400' }}
                   </div>
                 {% endif %}
                 <div class="tw-absolute tw-inset-0 tw-bg-gradient-to-t tw-from-velox-900/80 tw-via-transparent tw-to-transparent"></div>
