--- a/snippets/product-card.liquid
+++ b/snippets/product-card.liquid
@@ -64,8 +64,8 @@
       {% endif %}
     {% else %}
       {%- comment -%} Placeholder si no hay imagen {%- endcomment -%}
-      <div class="tw-aspect-product tw-w-full tw-bg-velox-100 tw-flex tw-items-center tw-justify-center">
-        {% render 'icon', name: 'eye', class: 'tw-w-12 tw-h-12 tw-text-velox-300' %}
+      <div class="tw-aspect-product tw-w-full tw-bg-velox-100 tw-overflow-hidden">
+        {{ 'product-1' | placeholder_svg_tag: 'tw-w-full tw-h-full tw-object-cover tw-text-velox-300' }}
       </div>
     {% endif %}
 
